services/explorer-api/k8s/overlays/devnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-api-devnet-service
  namespace: chicmoz-prod
spec:
  selector:
    app: explorer-api-devnet-label
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: http-app-port
